src/components/Body.module.css
.columnBody {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 90%;
    flex-grow: 1;
    margin-bottom: 40px;

    @media screen and (max-width: 1100px) {
        width: calc(100% - var(--root-page-padding) * 2);
    }
}

.rowBody {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: row;
    width: 100%;
    gap: 1%;
    flex-grow: 1;
}

